TestSuite/errors/err0419.pas
//!Неверное количество параметров функции
function f(i: integer): boolean;
begin
  
end;
begin
  while f do
    exit;
end.